test/scc/decl/semantic-errors/059.a
059.t:2:1: error: 'a' redeclared as different kind of symbol